--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
         #   ${{ secrets.ENV }}
 
       - name: zip create
-        run: tar -cpvzf ./$GITHUB_SHA.tgz *
+        run: tar -cpvzf ./GITHUB_SHA.tgz *
         shell: bash
 
       - name: Configure AWS credentials
@@ -42,7 +42,7 @@ jobs:
         run: |
           aws s3 cp \
             --region ap-northeast-2 \
-            ./$GITHUB_SHA.tgz s3://myeonjeobi-bucket/$PROJECT_NAME/$GITHUB_SHA.tg
+            ./$GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_NAME/GITHUB_SHA.tg
 
       - name: Deploy
         run: aws deploy create-deployment
@@ -50,4 +50,4 @@ jobs:
           --file-exists-behavior OVERWRITE
           --deployment-config-name CodeDeployDefault.OneAtATime
           --deployment-group-name deploy-group
-          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=key=$PROJECT_NAME/$GITHUB_SHA.tgz
+          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_NAME/GITHUB_SHA.tgz
