--- a/appspec.yml
+++ b/appspec.yml
@@ -1,20 +1,19 @@
-# version: 0.0
-# os: linux
-# # 폴더경로는 원하는 곳에 하시면 됩니다. 꼭  /usr/share/nginx/html/안에 들어가지 않아도 됩니다.
-# files:
-#   - source: /
-#     destination: /usr/share/nginx/html/**원하는-폴더경로**
-#     overwrite: yes
-# permissions:
-#   - object: /usr/share/nginx/html/**원하는-폴더경로**
-#     owner: root
-#     group: root
-#     mode: 755
-# hooks:
-#   AfterInstall:
-#     # location은 프로젝트의 root경로를 기준
-# 		# 파일을 올린 후 진행해야하는 작업을 적은 deploy.sh 파일 경로를 적어줍니다.
-# 		# 필요 없을 경우 안 적어도 되는 것 같습니다(테스트 필요).
-#     - location: deploy.sh
-#       timeout: 60
-#       runas: root
+version: 0.0
+os: linux
+
+files:
+  - source: /
+    destination: /home/ubuntu/myeonjeobi
+permissions:
+  - object: /home/ubuntu/
+    pattern: '**'
+    owner: root
+    group: root
+    mode: 755
+hooks:
+  BeforeInstall:
+    - location: scripts/before_deploy.sh
+      runas: ubuntu
+  AfterInstall:
+    - location: scripts/after_deploy.sh
+      runas: ubuntu
