--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,14 +21,8 @@ jobs:
       - name: Build
         run: yarn build
 
-        # - name: Create env file
-        # run: |
-        #   touch .env
-        #   cat << EOF >> .env
-        #   ${{ secrets.ENV }}
-
       - name: zip create
-        run: tar -cpvzf ./GITHUB_SHA.tgz *
+        run: tar -cpvzf ./$GITHUB_SHA.tgz *
         shell: bash
 
       - name: Configure AWS credentials
@@ -42,7 +36,7 @@ jobs:
         run: |
           aws s3 cp \
             --region ap-northeast-2 \
-            ./GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/GITHUB_SHA.tg
+            ./$GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/$GITHUB_SHA.tg
 
       - name: Deploy
         run: aws deploy create-deployment
@@ -50,4 +44,4 @@ jobs:
           --file-exists-behavior OVERWRITE
           --deployment-config-name CodeDeployDefault.OneAtATime
           --deployment-group-name deploy-group
-          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
+          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/$GITHUB_SHA.tgz
