--- a/appspec.yml
+++ b/appspec.yml
@@ -2,18 +2,18 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/crypto_strategy_2.0_server
+    destination: /home/ec2-user/nestjs-test/deploy
     overwrite: yes
-hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ec2-user
-  AfterInstall:
-    - location: scripts/after_install.sh
-      timeout: 300
-      runas: ec2-user
-  ApplicationStart:
-    - location: scripts/application_start.sh
-      timeout: 500
-      runas: ec2-user
+# hooks:
+#   BeforeInstall:
+#     - location: scripts/before_install.sh
+#       timeout: 300
+#       runas: ec2-user
+#   AfterInstall:
+#     - location: scripts/after_install.sh
+#       timeout: 300
+#       runas: ec2-user
+#   ApplicationStart:
+#     - location: scripts/application_start.sh
+#       timeout: 500
+#       runas: ec2-user
