배포 테스트3

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,26 +28,29 @@ jobs:
         run: cp appspec.yml ./deploy/
 
       - name: tar create
-        run: tar -cpvzf ./GITHUB_SHA.tgz *
+        run: tar -cpvzf ./GITHUB_SHA.tgz ./deploy
         shell: bash
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
+        env:
+          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
         run: |
           aws s3 cp \
             --region ap-northeast-2 \
             ./GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
 
-      - name: Deploy
-        run: aws deploy create-deployment
-          --application-name myeonjeobi-codedeploy
-          --file-exists-behavior OVERWRITE
-          --deployment-config-name CodeDeployDefault.OneAtAOnce
-          --deployment-group-name deploy-group
-          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
+      # - name: Deploy
+      #   run: aws deploy create-deployment
+      #     --application-name myeonjeobi-codedeploy
+      #     --file-exists-behavior OVERWRITE
+      #     --deployment-config-name CodeDeployDefault.OneAtAOnce
+      #     --deployment-group-name deploy-group
+      #     --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
