--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,9 +39,9 @@ jobs:
       #     aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
-        env:
-          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+        # env:
+        #   aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+        #   aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
         run: |
           aws s3 cp \
             --region ap-northeast-2 \
