--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,22 +21,16 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Make Directory for deliver
-        run: mkdir deploy
-
-      - name: Copy appspec
-        run: cp appspec.yml ./deploy/
-
       - name: tar create
-        run: tar -cpvzf ./GITHUB_SHA.tgz ./deploy
+        run: tar -cpvzf ./GITHUB_SHA.tgz *
         shell: bash
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-      #     aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-      #     aws-region: ${{ secrets.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
         # env:
@@ -45,6 +39,7 @@ jobs:
         run: |
           aws s3 cp \
             --region ap-northeast-2 \
+            --acl private \
             ./GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
 
       # - name: Deploy
