배포 테스트6

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,10 +42,10 @@ jobs:
             --acl private \
             ./GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
 
-      # - name: Deploy
-      #   run: aws deploy create-deployment
-      #     --application-name myeonjeobi-codedeploy
-      #     --file-exists-behavior OVERWRITE
-      #     --deployment-config-name CodeDeployDefault.OneAtAOnce
-      #     --deployment-group-name deploy-group
-      #     --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
+      - name: Deploy
+        run: aws deploy create-deployment
+          --application-name myeonjeobi-codedeploy
+          --file-exists-behavior OVERWRITE
+          --deployment-config-name CodeDeployDefault.OneAtAOnce
+          --deployment-group-name deploy-group
+          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
