--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,10 +43,10 @@ jobs:
             ./GITHUB_SHA.tgz s3://myeonjeobi-bucket/PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
 
       - name: Deploy
-        run: aws deploy create-deployment \
-          --application-name myeonjeobi-codedeploy \
-          --deployment-group-name deploy-group \
-          --file-exists-behavior OVERWRITE \
+        run: aws deploy create-deployment
+          --application-name myeonjeobi-codedeploy
+          --deployment-group-name deploy-group
+          --file-exists-behavior OVERWRITE
           # --deployment-config-name CodeDeployDefault.OneAtAOnce
-          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz \
+          --s3-location bucket=myeonjeobi-bucket,bundleType=tgz,key=PROJECT_MYEONJEOBI/GITHUB_SHA.tgz
           --region ap-northeast-2
